package objectadapter;

/**
 * 转换规则---手机适配接口
 */
public interface ITransverter {
    int output5V();
}
