@startuml
class Power{
    output220V():int
}
interface ITransverter{
    output5V():int
}
class ChargingHead{
    power:Power
    ChargingHead(power:Power)
}
ChargingHead o-- Power
ITransverter <|.. ChargingHead

class Phone{
    charge(iTransverter:ITransverter):void
}
Phone ..> ITransverter
class Client
Client ..> Phone
Client ..> ChargingHead
Client ..>Power
@enduml